--- a/ios/FireChat/GoogleService-Info.plist
+++ b/ios/FireChat/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>699072685684-lk5q213r2eahusst1j9h5uu5tjb0plm4.apps.googleusercontent.com</string>
+	<string>1018979936258-q51ceh74poihsm5hgp661jh3g41folqi.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.699072685684-lk5q213r2eahusst1j9h5uu5tjb0plm4</string>
+	<string>com.googleusercontent.apps.1018979936258-q51ceh74poihsm5hgp661jh3g41folqi</string>
 	<key>API_KEY</key>
-	<string>AIzaSyCP2nCLmQqUk3KbOduWglYiiqIkQYExwig</string>
+	<string>AIzaSyATR5oZRouxKGXY0ngkaXBcZ0VnVaMVqbY</string>
 	<key>GCM_SENDER_ID</key>
-	<string>699072685684</string>
+	<string>1018979936258</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.firechat</string>
 	<key>PROJECT_ID</key>
-	<string>chatreactdemo-8bd21</string>
+	<string>firechat-5303d</string>
 	<key>STORAGE_BUCKET</key>
-	<string>chatreactdemo-8bd21.appspot.com</string>
+	<string>firechat-5303d.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,8 +29,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:699072685684:ios:f62403cd4de0dc80d89321</string>
+	<string>1:1018979936258:ios:173727816a5184ec821f1b</string>
 	<key>DATABASE_URL</key>
-	<string>https://chatreactdemo-8bd21.firebaseio.com</string>
+	<string>https://firechat-5303d.firebaseio.com</string>
 </dict>
 </plist>
