--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.8.1",
     "@react-native-community/masked-view": "^0.1.7",
+    "firebase": "^7.10.0",
     "react": "16.9.0",
     "react-native": "^0.61.5",
     "react-native-app-intro-slider": "^3.0.0",
     "react-native-device-info": "^5.5.3",
-    "react-native-firebase": "^5.6.0",
-    "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
