--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.8.1",
     "@react-native-community/masked-view": "^0.1.7",
+    "@react-navigation/bottom-tabs": "^5.1.1",
     "firebase": "^7.10.0",
     "react": "16.9.0",
     "react-native": "^0.61.5",
     "react-native-app-intro-slider": "^3.0.0",
     "react-native-device-info": "^5.5.3",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.2.0",
+    "react-native-screens": "^2.3.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.2",
-    "react-navigation-stack": "^2.2.2"
+    "react-navigation-drawer": "^2.4.2",
+    "react-navigation-stack": "^2.2.3",
+    "react-navigation-tabs": "^2.8.2"
   },
   "devDependencies": {
     "@babel/core": "7.8.6",
