--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -179,6 +179,8 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-maps')
+    implementation project(':react-native-image-picker')
     implementation project(':@react-native-community_async-storage')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
