--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-native-app-intro-slider": "^3.0.0",
     "react-native-device-info": "^5.5.3",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-image-picker": "^2.3.1",
+    "react-native-maps": "^0.27.1",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.3.0",
